--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="CX File Explorer - Advanced file management and exploration tool with intuitive interface and powerful features.">
     <meta name="keywords" content="file explorer, file manager, CX File Explorer, file management">
     <meta name="author" content="CX File Explorer Team">
+    <meta name="google-site-verification" content="JIndLs9-WIYgo4ftMFy43He5L84mdRZtLO2CSv0-CH4" />
     <title>CX File Explorer - Professional File Management Tool</title>
     
     <!-- Schema.org Structured Data -->
