--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="eTa3Rf8Bjlq40ITgpI0E--9MIASmb_gALTOFYyIiWzQ" />
     <meta name="google-site-verification" content="JIndLs9-WIYgo4ftMFy43He5L84mdRZtLO2CSv0-CH4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CX File Explorer - Advanced file management and exploration tool with intuitive interface and powerful features.">
